Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -1145,7 +1145,7 @@
         "x \\rho x \\\\\n",
         " \\it{1, 2, 3} \\\\"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1223,7 @@
         "id": "oN2FcRIYY7iI",
         "outputId": "6673a67b-a783-44b5-839a-0ca0c351f1a5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1253,7 +1253,7 @@
           "height": 67
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1268,6 +1268,216 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# ガウス積分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\int_{-\\infty}^{\\infty} e^{-x^{2}} \\, dx = \\sqrt{\\pi}"
+      ],
+      "metadata": {
+        "id": "RM1GASC4gUmQ",
+        "outputId": "8cf9a0d3-606d-4ced-e29e-3ca3c7c40e56",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\int_{-\\infty}^{\\infty} e^{-x^{2}} \\, dx = \\sqrt{\\pi}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 関数 $f(x)$ の導関数は\n",
+        "# f’(x) = \\lim_{\\varDelta x \\to 0} \\frac{ f(x+\\varDelta x) - f(x) }{\\varDelta x}\n",
+        "# である"
+      ],
+      "metadata": {
+        "id": "Naejv7f18izy"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 関数 $f(x)$ の導関数は\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "f’(x) = \\lim_{\\varDelta x \\to 0} \\frac{ f(x+\\varDelta x) - f(x) }{\\varDelta x}"
+      ],
+      "metadata": {
+        "id": "HXzjX_gyg2fJ",
+        "outputId": "90099d0a-8cec-47cf-83b5-c59a5df541ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nf’(x) = \\lim_{\\varDelta x \\to 0} \\frac{ f(x+\\varDelta x) - f(x) }{\\varDelta x}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 三角関数の積分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\int \\tan\\theta \\, d\\theta = \\int \\frac{\\sin\\theta}{\\cos\\theta} \\, d\\theta= -\\log |\\cos\\theta| + C"
+      ],
+      "metadata": {
+        "id": "zxOq4jQm80yi",
+        "outputId": "35777625-1b3e-4dde-db62-f53df60417ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\int \\tan\\theta \\, d\\theta = \\int \\frac{\\sin\\theta}{\\cos\\theta} \\, d\\theta= -\\log |\\cos\\theta| + C"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 式の変形 align が使えないので array でやる\n",
+        "%%latex\n",
+        "\\begin{array}{rcl}\n",
+        "    \\cos 2 \\theta &=& \\cos^{2} \\theta - \\sin^{2} \\theta \\\\\n",
+        "        &=& 2 \\cos^{2} \\theta - 1 \\\\\n",
+        "        &=& 1 - 2\\sin^{2} \\theta \\\\\n",
+        "\\end{array}"
+      ],
+      "metadata": {
+        "id": "CZnsrL8d9JfQ",
+        "outputId": "7a3c67e2-3774-427b-cab7-b7e3ab5bcab8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 79
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\begin{array}{rcl}\n    \\cos 2 \\theta &=& \\cos^{2} \\theta - \\sin^{2} \\theta \\\\\n        &=& 2 \\cos^{2} \\theta - 1 \\\\\n        &=& 1 - 2\\sin^{2} \\theta \\\\\n\\end{array}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 片括弧、大括弧、大波括弧\n",
+        "# cases が使えない\n",
+        "# 絶対値 abs || の定義\n",
+        "%%latex\n",
+        "|x| = \\left\\{\n",
+        "\\begin{array}{ll}\n",
+        "x  & x \\geqq 0のとき \\\\\n",
+        "-x & x \\lt 0のとき\n",
+        "\\end{array} \n",
+        "\\right."
+      ],
+      "metadata": {
+        "id": "rQtOs73i9bor",
+        "outputId": "1d2b2633-7b21-41f9-f842-4c137830bf18",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "|x| = \\left\\{\n\\begin{array}{ll}\nx  & x \\geqq 0のとき \\\\\n-x & x \\lt 0のとき\n\\end{array} \n\\right."
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 行列 n \\times n 行列が逆行列 A^{-1} をもつための必要十分条件は、 \\det A \\neq 0  である。\n",
+        "%%latex\n",
+        "A =\\begin{pmatrix}\n",
+        "a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
+        "a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
+        "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+        "a_{n1} & a_{n2} & \\ldots & a_{nn}\n",
+        "\\end{pmatrix} \n",
+        "\\\\[1.0em]\n",
+        "n \\times n \\\\\n",
+        "A^{-1} \\\\\n",
+        "\\det A \\neq 0"
+      ],
+      "metadata": {
+        "id": "wxpJ6Uc5-F_0",
+        "outputId": "f3e90ac3-4a5f-4228-8090-2f48d265bd4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 192
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "A =\\begin{pmatrix}\na_{11} & a_{12} & \\ldots & a_{1n} \\\\\na_{21} & a_{22} & \\ldots & a_{2n} \\\\\n\\vdots & \\vdots & \\ddots & \\vdots \\\\\na_{n1} & a_{n2} & \\ldots & a_{nn}\n\\end{pmatrix} \n\\\\[1.0em]\nn \\times n \\\\\nA^{-1} \\\\\n\\det A \\neq 0"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -1275,95 +1485,6 @@
       "metadata": {
         "id": "oIRgtf-1rN28"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iyzcwrXD8SUc"
-      },
-      "source": [
-        "---\n",
-        "ガウス積分\n",
-        "\n",
-        "$$\n",
-        "\\int_{-\\infty}^{\\infty} e^{-x^{2}} \\, dx = \\sqrt{\\pi}\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Naejv7f18izy"
-      },
-      "source": [
-        "---\n",
-        "関数 $f(x)$ の導関数は\n",
-        "$$\n",
-        "f’(x) = \\lim_{\\varDelta x \\to 0} \\frac{ f(x+\\varDelta x) - f(x) }{\\varDelta x}$$\n",
-        "である。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zxOq4jQm80yi"
-      },
-      "source": [
-        "---\n",
-        "三角関数の積分\n",
-        "\n",
-        "$$\\int \\tan\\theta \\, d\\theta = \\int \\frac{\\sin\\theta}{\\cos\\theta} \\, d\\theta= -\\log |\\cos\\theta| + C$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CZnsrL8d9JfQ"
-      },
-      "source": [
-        "---\n",
-        "式の変形\n",
-        "$$\n",
-        "\\begin{align}\\cos 2\\theta &= \\cos^{2} \\theta - \\sin^{2} \\theta \\\\&= 2\\cos^{2} \\theta - 1 \\\\&= 1 - 2\\sin^{2} \\theta\\end{align}\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rQtOs73i9bor"
-      },
-      "source": [
-        "---\n",
-        "片括弧、大括弧、大波括弧、cases\n",
-        "\n",
-        "$$\n",
-        "|x| = \n",
-        "\\begin{cases}\n",
-        "fx  & x \\ge 0のとき\\\\\n",
-        "-x & x \\lt 0のとき\n",
-        "\\end{cases}\\\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wxpJ6Uc5-F_0"
-      },
-      "source": [
-        "---\n",
-        "行列 $n \\times n$ 行列\n",
-        "\n",
-        "$$A =\\begin{pmatrix}\n",
-        "a_{11} & a_{12} & \\ldots & a_{1n} \\\\\n",
-        "a_{21} & a_{22} & \\ldots & a_{2n} \\\\\n",
-        "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
-        "a_{n1} & a_{n2} & \\ldots & a_{nn}\n",
-        "\\end{pmatrix} $$\n",
-        "\n",
-        "が逆行列 $A^{-1}$ をもつための必要十分条件は、$ \\det A \\neq 0 $ である。"
-      ]
     },
     {
       "cell_type": "markdown",
