Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -1517,7 +1517,7 @@
           "height": 58
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1552,7 +1552,7 @@
           "height": 96
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1639,7 +1639,7 @@
           "height": 137
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1668,7 +1668,7 @@
           "height": 39
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1683,6 +1683,156 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# テイラー展開\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "f(x) = \\sum^\\infty_{n=0}\\frac{f^{(n)}(a)}{n !} (x-a)^n"
+      ],
+      "metadata": {
+        "id": "LGnsooTrD4ce",
+        "outputId": "69b78287-b112-40c9-c912-983d51b71d9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 66
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nf(x) = \\sum^\\infty_{n=0}\\frac{f^{(n)}(a)}{n !} (x-a)^n"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 正規分布\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "f(x)=\\frac 1 {\\sqrt{2\\pi \\sigma^2}}\\exp\\left (-\\frac{(x-\\mu)^2}{2\\sigma^2}\\right)"
+      ],
+      "metadata": {
+        "id": "A213i1e-ETtW",
+        "outputId": "7cb14b29-ec00-4b77-9880-798cb582ce9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nf(x)=\\frac 1 {\\sqrt{2\\pi \\sigma^2}}\\exp\\left (-\\frac{(x-\\mu)^2}{2\\sigma^2}\\right)"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ニュートンの運動方程式\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "m \\frac{d^2 \\overrightarrow r}{d t^2}=\\overrightarrow F"
+      ],
+      "metadata": {
+        "id": "P8X97epME1KG",
+        "outputId": "623b4d27-9f27-43b8-bf0c-ca02dfc0e7bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 56
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nm \\frac{d^2 \\overrightarrow r}{d t^2}=\\overrightarrow F"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ラグランジュの運動方程式\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\frac d {dt}\\left(\\frac{\\partial \\mathcal L}{\\partial \\dot q} \\right) - \\frac{\\partial \\mathcal L}{\\partial q} = 0"
+      ],
+      "metadata": {
+        "id": "nRGuh4uhFk26",
+        "outputId": "eb84d7f7-6c34-4a8d-89c8-358950600370",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\frac d {dt}\\left(\\frac{\\partial \\mathcal L}{\\partial \\dot q} \\right) - \\frac{\\partial \\mathcal L}{\\partial q} = 0"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# フーリエ変換\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\hat f (\\xi) = \\int_{\\mathbb R ^n} f(x) e ^{-2 \\pi i x \\cdot \\xi} dx"
+      ],
+      "metadata": {
+        "id": "ZqHc-lbcG6TN",
+        "outputId": "e0d9dbed-1b80-415c-869c-1a20e9a5f46d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\hat f (\\xi) = \\int_{\\mathbb R ^n} f(x) e ^{-2 \\pi i x \\cdot \\xi} dx"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# いまここ"
@@ -1690,76 +1840,6 @@
       "metadata": {
         "id": "oIRgtf-1rN28"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LGnsooTrD4ce"
-      },
-      "source": [
-        "---\n",
-        "テイラー展開\n",
-        "\n",
-        "$$\n",
-        "f(x) = \\sum^\\infty_{n=0}\\frac{f^{(n)}(a)}{n !} (x-a)^n\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "A213i1e-ETtW"
-      },
-      "source": [
-        "---\n",
-        "正規分布\n",
-        "\n",
-        "$$\n",
-        "f(x)=\\frac 1 {\\sqrt{2\\pi \\sigma^2}}\\exp\\left (-\\frac{(x-\\mu)^2}{2\\sigma^2}\\right)\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P8X97epME1KG"
-      },
-      "source": [
-        "---\n",
-        "ニュートンの運動方程式\n",
-        "\n",
-        "$$\n",
-        "m \\frac{d^2 \\overrightarrow r}{d t^2}=\\overrightarrow F\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nRGuh4uhFk26"
-      },
-      "source": [
-        "---\n",
-        "ラグランジュの運動方程式\n",
-        "\n",
-        "$$\n",
-        "\\frac d {dt}\\left(\\frac{\\partial \\mathcal L}{\\partial \\dot q} \\right) - \\frac{\\partial \\mathcal L}{\\partial q} = 0\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZqHc-lbcG6TN"
-      },
-      "source": [
-        "---\n",
-        "フーリエ変換\n",
-        "\n",
-        "$$\n",
-        "\\hat f (\\xi) = \\int_{\\mathbb R ^n} f(x) e ^{-2 \\pi i x \\cdot \\xi} dx\n",
-        "$$\n"
-      ]
     },
     {
       "cell_type": "markdown",
