Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -40,7 +40,6 @@
     "colab": {
       "name": "learnlatex.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -2107,11 +2106,11 @@
       ],
       "metadata": {
         "id": "BG51pZgZZ9l0",
-        "outputId": "8977b8c3-c0eb-4300-a461-10a3b1ab8128",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "8977b8c3-c0eb-4300-a461-10a3b1ab8128"
       },
       "execution_count": 52,
       "outputs": [
@@ -2166,12 +2165,12 @@
         "_{\\it n}\\mathrm{C}_{\\it r} = \\frac{n!}{(n-r)!r!}"
       ],
       "metadata": {
-        "id": "hxIyftRRnwSl",
-        "outputId": "47e6220c-d77c-4a07-db3f-52ef78828033",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 92
-        }
+        },
+        "id": "hxIyftRRnwSl",
+        "outputId": "47e6220c-d77c-4a07-db3f-52ef78828033"
       },
       "execution_count": 57,
       "outputs": [
@@ -2199,23 +2198,126 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 1 次微分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\dot x = x^{\\prime} = d x/d t=\\frac{d x(t)}{d t}=\\frac{d}{d t}\\left(x(t)\\right)"
       ],
       "metadata": {
-        "id": "WPCK-I7lodx1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "WPCK-I7lodx1",
+        "outputId": "92fd9d22-5bc1-4e02-a2ec-4d0ec03c5c7e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\dot x = x^{\\prime} = d x/d t=\\frac{d x(t)}{d t}=\\frac{d}{d t}\\left(x(t)\\right)"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "微分・積分\n",
-        "表示項目\t表示\t入力\n",
-        "1次微分\t\\dot x = x^{\\prime} = d x/d t=\\frac{d x(t)}{d t}=\\frac{d}{d t}\\left(x(t)\\right),\t\\dot x = x^{\\prime} = dx/dt=\\frac{d x(t)}{d t}=\\frac{d}{d t}\\left(x(t)\\right),\n",
-        "2次微分\t\\ddot x = x^{\\prime \\prime} = d^{2} x/d t^{2}=\\frac{d^{2} x(t)}{d t^{2}}=\\frac{d^{2}}{d t^{2}}\\left(x(t)\\right),\t\\ddot x = x^{\\prime \\prime} = d^{2}x/dt^{2}=\\frac{d^{2} x(t)}{d t^{2}}=\\frac{d}{d t^{2}}\\left(x(t)\\right),\n",
-        "積分\t\\int f(x)dx, \\  g(x)=\\int^{x} f(x')dx', \\  \\int_{\\alpha}^{\\beta} f(x)dx. \t\\int f(x)dx, \\ g(x)=\\int^{x} f(x')dx', \\ \\int_{\\alpha}^{\\beta} f(x)dx.\n",
-        "面積分，線積分 \\rm≡\\mathrm\t\\int\\mspace{-11mu}\\int_{S} f(x,y)  \\mspace{2mu}{\\rm d} x \\mspace{2mu}{\\rm d}y, \\quad \\oint_{C} f(z){\\rm d}z. \t\\int\\mspace{-11mu}\\int_{S} f(x,y)\\mspace{2mu}{\\rm d}x \\mspace{2mu}{\\rm d}y, \\quad \\oint_{C} f(z){\\rm d}z.\n",
+        "# 2 次微分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\ddot x = x^{\\prime \\prime} = d^{2} x/d t^{2}=\\frac{d^{2} x(t)}{d t^{2}}=\\frac{d^{2}}{d t^{2}}\\left(x(t)\\right)"
+      ],
+      "metadata": {
+        "id": "jMAcriuW1zI9",
+        "outputId": "9007b5bd-cfa3-44ec-ad75-4f39662b6cf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\ddot x = x^{\\prime \\prime} = d^{2} x/d t^{2}=\\frac{d^{2} x(t)}{d t^{2}}=\\frac{d^{2}}{d t^{2}}\\left(x(t)\\right)"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 積分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\int f(x)dx, \\  g(x)=\\int^{x} f(x')dx', \\  \\int_{\\alpha}^{\\beta} f(x)dx"
+      ],
+      "metadata": {
+        "id": "ICohMSBo1-4G",
+        "outputId": "03aa6f77-23b4-42a9-bd3c-bca6e86bc5db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 60
+        }
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\int f(x)dx, \\  g(x)=\\int^{x} f(x')dx', \\  \\int_{\\alpha}^{\\beta} f(x)dx"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 面積分、線積分\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\iint_{S} f(x,y) {\\mathrm d} x {\\mathrm d}y, \\quad  \\oint_{C} f(z){\\mathrm d}z"
+      ],
+      "metadata": {
+        "id": "tQtptxAe2Pqo",
+        "outputId": "1d620d97-5e35-4dc5-8c4b-4109d6c9d1ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\iint_{S} f(x,y) {\\mathrm d} x {\\mathrm d}y, \\quad  \\oint_{C} f(z){\\mathrm d}z"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "偏微分\t\\frac{\\partial f(x,y)}{\\partial x} =\\partial_{x}f(x,y)=f_{x}(x,y),\t\\frac{\\partial f(x,y)}{\\partial x} =\\partial_{x}f(x,y)=f_{x}(x,y),\n",
         "ベクトル・行列・行列式\n",
         "表示項目\t表示\t入力\n",
