Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -2536,7 +2536,7 @@
         },
         "outputId": "d720eab1-b58f-4763-bd56-25a43425ab3e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2568,7 +2568,7 @@
         "id": "L-NHbbMAB-5n",
         "outputId": "18ca1b07-5c83-4972-f025-192d6600732f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2601,7 +2601,7 @@
         "id": "ncS5k7BOCa-z",
         "outputId": "b45eb816-270d-4efc-d3a2-e8e4cef38e4d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2632,7 +2632,7 @@
         "id": "uv1DlaFFDGVM",
         "outputId": "3111f500-bc12-44c3-f914-e888a7a5c70f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2645,15 +2645,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "oIRgtf-1rN28"
-      }
     },
     {
       "cell_type": "code",
@@ -2671,7 +2662,7 @@
         "id": "aDtLCjitDqBy",
         "outputId": "3e0e9f0c-42c5-49ce-ed66-0437473eba1b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2688,89 +2679,176 @@
     {
       "cell_type": "code",
       "source": [
-        "複素数とオイラーの公式\n",
-        "表示項目\t表示\t入力\n",
-        "複素数 成分により表示\tz=x+\\mathrm{i}y=r\\mathrm{e}^{+\\mathrm{i}\\theta} =r\\left(\\cos(\\theta)+\\mathrm{i}\\sin(\\theta)\\right), \\\\ \\bar z=x-\\mathrm{i}y=r\\mathrm{e}^{-\\mathrm{i}\\theta} =  r\\left(\\cos(\\theta)-\\mathrm{i}\\sin(\\theta)\\right),\tz=x+\\mathrm{i}y =r\\mathrm{e}^{+\\mathrm{i}\\theta} =r\\left(\\cos(\\theta)+\\mathrm{i}\\sin(\\theta)\\right), \\\\ \\bar z =x-\\mathrm{i}y=r\\mathrm{e}^{-\\mathrm{i}\\theta} =r\\left(\\cos(\\theta)-\\mathrm{i}\\sin(\\theta)\\right).\n",
-        "オイラーの公式\t\\mathrm{e}^{\\mathrm{i}\\theta} = \\cos(\\theta) + \\mathrm{i}\\sin(\\theta)\t\\mathrm{e}^{\\mathrm{i}\\theta} = \\cos(\\theta) + \\mathrm{i}\\sin(\\theta)\n",
-        "オイラーの逆公式\t\\cos(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} + \\mathrm{e}^{-\\mathrm{i}\\theta}}{2},\\\\ \\sin(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} - \\mathrm{e}^{-\\mathrm{i}\\theta}}{2\\mathrm{i}}\t\\cos(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} + \\mathrm{e}^{-\\mathrm{i}\\theta}}{2},\\\\ \\sin(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} - \\mathrm{e}^{-\\mathrm{i}\\theta}}{2\\mathrm{i}}\n",
-        "指数関数と双曲線関数\n",
-        "表示項目\t表示\t入力\n",
-        "指数関数　←　双曲線関数\t\\mathrm{e}^{x} & = \\cosh(x)+\\sinh(x), \\\\ \\mathrm{e}^{-x} & =\\cosh(x)-\\sinh(x)\t\\mathrm{e}^{x} & = \\cosh(x)+\\sinh(x), \\\\ \\mathrm{e}^{-x} & =\\cosh(x)-\\sinh(x)\n",
-        "双曲線関数　←　指数関数\t\\cosh(x) & =\\dfrac{\\mathrm{e}^{x}+\\mathrm{e}^{-x}}{2},\\\\ \\sinh(x) & = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}}{2},\\\\ \\tanh(x) & = \\dfrac{\\sinh(x)}{\\cosh(x)} = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}} {\\mathrm{e}^{x}+\\mathrm{e}^{-x}}.\t\\cosh(x) & =\\dfrac{\\mathrm{e}^{x}+\\mathrm{e}^{-x}}{2},\\\\ \\sinh(x) & = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}}{2},\\\\ \\tanh(x) & = \\dfrac{\\sinh(x)}{\\cosh(x)} = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}} {\\mathrm{e}^{x}+\\mathrm{e}^{-x}}.\n",
-        "式の横並び：簡易法 &&仕切り\tu(x,0) =0, && u(0,t) =U, && u(\\infty ,t) =0.\tu(x,0) =0, && u(0,t) =U, && u(\\infty ,t) =0.\n",
-        "記号(Symbols)\n",
-        "記号\n",
-        "表示/入力\t表示/入力\t表示/入力\t表示/入力\n",
-        "\\pm \\pm\t\\circ \\circ\t\\bullet \\bullet\t\\cdot \\cdot\n",
-        "\\aleph \\aleph\t\\hbar \\hbar\t\\Re \\Re\t\\Im \\Im\n",
-        "\\infty \\infty\t\\emptyset \\emptyset\t\\forall \\forall\t\\exists \\exists\n",
-        "\\cap \\cap\t\\cup \\cup\t\\vee \\vee\t\\wedge \\wedge\n",
-        "\\subset \\subset\t\\supset \\supset\t\\sqsubset \\sqsubset\t\\sqsupset \\sqsupset\n",
-        "\\subseteq \\subseteq\t\\supseteq \\supseteq\t\\vdash \\vdash\t\\dashv \\dashv\n",
-        "\\in \\in\t\\notin \\notin\t\\ni \\ni\t\\not\\ni \\not\\ni\n",
-        "\\parallel \\parallel\t\\perp \\perp\t\\sim \\sim\t\\simeq \\simeq\n",
-        "\\equiv \\equiv\t\\approx \\approx\t\\propto \\propto\t\\neq \\neq\n",
-        "\\le \\le\t\\ll \\ll\t\\ge \\ge\t\\gg \\gg\n",
-        "矢印と括弧\n",
-        "矢印と括弧\n",
-        "表示 入力\t表示 入力\n",
-        "\\gets \\gets\t\\longleftarrow \\longleftarrow\n",
-        "\\Leftarrow \\Leftarrow\t\\Longleftarrow \\Longleftarrow\n",
-        "\\to \\to\t\\longrightarrow \\longrightarrow\n",
-        "\\Rightarrow \\Rightarrow\t\\Longrightarrow \\Longrightarrow\n",
-        "\\leftrightarrow \\leftrightarrow\t\\longleftrightarrow \\longleftrightarrow\n",
-        "\\Leftrightarrow \\Leftrightarrow\t\\Longleftrightarrow \\Longleftrightarrow\n",
-        "\\mapsto \\mapsto\t\\longmapsto \\longmapsto\n",
-        "\\hookleftarrow \\hookleftarrow\t\\hookrightarrow \\hookrightarrow\n",
-        "\\rightleftharpoons \\rightleftharpoons\t\\upharpoonleft\\hspace{-.24em}\\downharpoonright \\upharpoonleft\\hspace{-.24em}\\downharpoonright\n",
-        "\\uparrow \\uparrow\t\\downarrow \\downarrow\n",
-        "\\Uparrow \\Uparrow\t\\Downarrow \\Downarrow\n",
-        "\\updownarrow \\updownarrow\t\\Updownarrow \\Updownarrow\n",
-        "\\upharpoonleft upharpoonleft\t\\downharpoonright downharpoonright\n",
-        "| |\t\\| \\|\n",
-        "\\{ x\\} \\{ x\\}\t\\lceil x \\rceil \\lceil x \\rceil\n",
-        "\\langle x \\rangle \\langle x \\rangle\t\\lfloor x \\rfloor \\lfloor x \\rfloor\n",
-        "賢いドットと省略型ドット\n",
-        "賢いdots と 省略型dotsX\n",
-        "用法\t表示\t入力\n",
-        "賢いdots(カンマ区切り)\ta_1,a_2,\\dots,a_n.\ta_1,a_2,\\dots,a_n.\n",
-        "賢いdots(二項演算子)\ta_1 + a_2 + \\dots + a_n\ta_1 + a_2 + \\dots + a_n\n",
-        "賢いdots(多項並べ)\ta_1 a_2 \\dots a_n\ta_1 a_2 \\dots a_n\n",
-        "賢いdots(多重積分)\t\\int \\dots \\int \t\\int \\dots \\int\n",
-        "dotsc (commas)\ta_1,\\dotsc\ta_1,\\dotsc\n",
-        "dotsb (binary op. or relations)\ta_1 + \\dotsb\ta_1 + \\dotsb\n",
-        "dotsm (multiplications)\ta_1 \\dotsm\ta_1 \\dotsm\n",
-        "dotsi (integrals)\t\\int \\dotsi\t\\int \\dotsi\n",
-        "ギリシャ文字(小文字，大文字・立体，大文字・斜体)\n",
-        "Greek letters\n",
-        "表示/入力\t表示/入力\t表示/入力\t表示/入力\n",
-        "\\alpha \\alpha\t\\eta \\eta\t\\nu \\nu\t\\tau \\tau\n",
-        "\\beta \\beta\t\\theta \\theta\t\\xi \\xi\t\\upsilon \\upsilon\n",
-        "\\gamma \\gamma\t\\iota \\iota\tomicron\t\\phi \\phi\n",
-        "\\delta \\delta\t\\kappa \\kappa\t\\pi \\pi\t\\chi \\chi\n",
-        "\\epsilon \\epsilon\t\\lambda \\lambda\t\\rho \\rho\t\\psi \\psi\n",
-        "\\zeta \\zeta\t\\mu \\mu\t\\sigma \\sigma\t\\omega \\omega\n",
-        "\\Gamma \\Gamma\t\\Theta \\Theta\t\\Xi \\Xi\t\\Upsilon \\Upsilon\n",
-        "\\Delta \\Delta\t\\Lambda \\Lambda\t\\Pi \\Pi\t\\Phi \\Phi\n",
-        " \t \t\\Sigma \\Sigma\t\\Psi \\Psi\n",
-        " \t \t \t\\Omega \\Omega\n",
-        "\\varGamma \\varGamma\t\\varTheta \\varTheta\t\\varXi \\varXi\t\\varUpsilon \\varUpsilon\n",
-        "\\varDelta \\varDelta\t\\varLambda \\varLambda\t\\varPi \\varPi\t\\varPhi \\varPhi\n",
-        " \t \t\\varSigma \\varSigma\t\\varPsi \\varPsi\n",
-        " \t \t \t\\varOmega \\varOmega\n",
-        "数学での「数の種類分け」記号\n",
-        "表示\t入力\t表示\t入力\t意味\t例\n",
-        "\\mathbb{N}\t\\mathbb{N}\t\\mathbf{N}\t\\mathbf{N}\t自然数の全体\t1,2,\\dots\n",
-        "\\mathbb{Z}\t\\mathbb{Z}\t\\mathbf{Z}\t\\mathbf{Z}\t整数全体\t0,\\pm1,\\pm2,\\dots\n",
-        "\\mathbb{Q}\t\\mathbb{Q}\t\\mathbf{Q}\t\\mathbf{Q}\t有理数全体\t\\pm 2/3\n",
-        "\\mathbb{R}\t\\mathbb{R}\t\\mathbf{R}\t\\mathbf{R}\t実数全体\t\\sqrt{2}, \\pi, e=\\mathrm{e}^{1}\n",
-        "\\mathbb{C}\t\\mathbb{C}\t\\mathbf{C}\t\\mathbf{C}\t複素数全体\t\\sqrt{-1}=\\mathrm{e}^{\\mathrm{i}\\pi / 2}\n",
-        "参考文献\n",
-        "数式掲示板 スレッド No.11108\n",
-        "数式掲示板 スレッド No.11307\n",
-        "数式掲示板 スレッド No.11396\n",
-        "Valid XHTML 1.0![home] [その他] [ページの先頭]\n",
-        "著者 : CO , 初版 : 2006-11-27, 最終更新 : 2007-03-21 15:42:48"
+        "# オイラーの公式\n",
+        "%%latex\n",
+        "\\mathrm{e}^{\\mathrm{i}\\theta} = \\cos(\\theta) + \\mathrm{i}\\sin(\\theta)"
+      ],
+      "metadata": {
+        "id": "AcWWLwvrsAAc",
+        "outputId": "99d88477-afe6-457b-ea81-730afe071c73",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\mathrm{e}^{\\mathrm{i}\\theta} = \\cos(\\theta) + \\mathrm{i}\\sin(\\theta)"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# オイラーの逆公式\t\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\cos(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} + \\mathrm{e}^{-\\mathrm{i}\\theta}}{2} \\\\ \\sin(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} - \\mathrm{e}^{-\\mathrm{i}\\theta}}{2\\mathrm{i}}\t"
+      ],
+      "metadata": {
+        "id": "-i0zVIuKscMB",
+        "outputId": "d902b1f3-6797-47ee-dfde-075678b492d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 92
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\cos(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} + \\mathrm{e}^{-\\mathrm{i}\\theta}}{2} \\\\ \\sin(\\theta) = \\frac{\\mathrm{e}^{\\mathrm{i}\\theta} - \\mathrm{e}^{-\\mathrm{i}\\theta}}{2\\mathrm{i}}\t"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 指数関数 ← 双曲線関数\t\n",
+        "%%latex\n",
+        "\\begin{array}{lll}\n",
+        "\\mathrm{e}^{x} & = \\cosh(x)+\\sinh(x)\\\\ \n",
+        "\\mathrm{e}^{-x} & =\\cosh(x)-\\sinh(x)\t\n",
+        "\\end{array}\n"
+      ],
+      "metadata": {
+        "id": "nHF1wqUatDOW",
+        "outputId": "633d2414-f59d-49ab-ff50-83d5e6d48fd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\begin{array}{lll}\n\\mathrm{e}^{x} & = \\cosh(x)+\\sinh(x)\\\\ \n\\mathrm{e}^{-x} & =\\cosh(x)-\\sinh(x)\t\n\\end{array}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 双曲線関数　←　指数関数\t\n",
+        "%%latex\n",
+        "\\begin{array}{lll}\n",
+        "\\displaystyle\n",
+        "\\cosh(x) & =\\dfrac{\\mathrm{e}^{x}+\\mathrm{e}^{-x}}{2}\\\\[0.8em]\n",
+        "\\sinh(x) & = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}}{2}\\\\[0.8em]\n",
+        "\\tanh(x) & = \\dfrac{\\sinh(x)}{\\cosh(x)} = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}} {\\mathrm{e}^{x}+\\mathrm{e}^{-x}}.\t\n",
+        "\\end{array}"
+      ],
+      "metadata": {
+        "id": "2KcrY_MjtpAv",
+        "outputId": "eabc9639-a8df-4aef-db8e-1e7793ac4fa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\begin{array}{lll}\n\\displaystyle\n\\cosh(x) & =\\dfrac{\\mathrm{e}^{x}+\\mathrm{e}^{-x}}{2}\\\\[0.8em]\n\\sinh(x) & = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}}{2}\\\\[0.8em]\n\\tanh(x) & = \\dfrac{\\sinh(x)}{\\cosh(x)} = \\dfrac{\\mathrm{e}^{x}-\\mathrm{e}^{-x}} {\\mathrm{e}^{x}+\\mathrm{e}^{-x}}.\t\n\\end{array}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 式の横並び：簡易法 &&仕切り => 使えない\n",
+        "# && は使えないので \\quad を使う\n",
+        "# もっとあけたい時は \\qquad を使う\n",
+        "%%latex\n",
+        "u(x,0) =0, \\quad u(0,t) =U, \\quad u(\\infty ,t) =0 \\\\\n",
+        "u(x,0) =0, \\qquad u(0,t) =U, \\qquad u(\\infty ,t) =0 \\\\"
+      ],
+      "metadata": {
+        "id": "zXRGC2eZukP7",
+        "outputId": "7d56dcb0-86e3-4b7d-b1fb-806e7d5779b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 60
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "u(x,0) =0, \\quad u(0,t) =U, \\quad u(\\infty ,t) =0 \\\\\nu(x,0) =0, \\qquad u(0,t) =U, \\qquad u(\\infty ,t) =0 \\\\"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "a5qU0N4cwOk-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# これから\n",
+        "# ウィキペディアの初等数学公式集を colab 化する実験\n",
+        "# https://ja.wikibooks.org/wiki/初等数学公式集\n",
+        "# をやっているのでここに付け加えるかもしれない"
       ],
       "metadata": {
         "id": "f_fB3Qlzaxic"
@@ -2781,9 +2859,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# http://hooktail.sub.jp/nocategory/latexImpress/\n",
-        "# 物理のかぎしっぽ\n",
-        "# 数学公式集 latex"
+        ""
       ],
       "metadata": {
         "id": "OyR5fn3soi-X"
